Disclaimer pagina aangepast met tussenkopjes en referentie format aangepast

--- a/index.html
+++ b/index.html
@@ -152,13 +152,18 @@
             <!-- Column for info -->
             <div class="col">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
-                  <h4>Disclaimer</h4>
                    <p class="mb-4">
-                      The translation tool on this website explores the possibility of translating text to sign language using animated sign language avatars. It is meant to serve as an option for easing communication in situations where professional sign language interpreters cannot be employed, such as in healthcare. It is challenging for healthcare professionals to communicate with <b><a href="https://doi.org/10.1016/S0140-6736(11)61143-4" target="_blank">Deaf patients</a></b>, especially in times of <b><a href="https://doi.org/10.1001/jamaoto.2020.1705" target="_blank">COVID-19</a></b>. Sign language interpreters cannot always enter hospitals and clinics, facemasks make <b><a href="https://doi.org/10.1136/bmj.m2372" target="_blank">lipreading impossible</a></b> and interpreting via videorelay is not always viable. A demo is available of the translations of various sentences frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlans (NGT) to illustrate what is possible with sign language avatars.
+                      The translation tool on this website explores the possibility of translating text to sign language using animated sign language avatars. It is meant to serve as an option for easing communication in situations where professional sign language interpreters cannot be employed, such as in healthcare. 
                     </p>
+                    <h5>Case Study</h5>
+                    <p class="mb-4">
+                      It is challenging for healthcare professionals to communicate with Deaf patients <b><a href="https://doi.org/10.1016/S0140-6736(11)61143-4" target="_blank">[Felllinger, Holzinger and Pollard, 2012]</a></b>, especially in times of COVID-19 <b><a href="https://doi.org/10.1001/jamaoto.2020.1705" target="_blank">[Mckee, Moran and Zazove, 2020]</a></b>. Sign language interpreters cannot always enter hospitals and clinics, facemasks make lipreading impossible <b><a href="https://doi.org/10.1136/bmj.m2372" target="_blank">[Grote and Izagaren,2020]</a></b> and interpreting via videorelay is not always viable. A demo is available of the translations of various sentences frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlans (NGT) to illustrate what is possible with sign language avatars. Just click on the GIF of the avatar to the right.
+                    </p>
+                    <h5>Disclaimer</h5>
                     <p>
                       We would like to emphasise that a qualified sign language interpreter should, whenever available, always be preferred over a machine translation system. Still, it is worth investigating the extent to which a machine translation system making use of avatar technology can be of help in situations in which a human interpreter cannot be employed.
                    </p>
+                   <h5>Additional resources</h5>
                    <p>
                      On the
                      <a href="https://www.wattelt.org/corona/" target="_blank">Wat Telt!</a> website
@@ -465,7 +470,7 @@
               <h4>Sign Language Translation in a Healthcare Setting</h4>
                 <p class="mb-4">
                   <b>Year:</b> 2021 <br>
-                  <b>Authors:</b> L.D. Esselink, S.M. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
+                  <b>Authors:</b> L.D. Esselink, S.E. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
                   <b>Type:</b> Manuscript submitted for publication<br>
                   <a href="publications/COVID-19.pdf" download="COVID-19">Download paper <i class="bi bi-download"></i></a>
                   <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
@@ -553,7 +558,7 @@
             <h4>The signing space for the synthesis of directional verbs in NGT</h4>
             <p class="mb-4">
               <b>Year:</b> 2020 <br>
-              <b>Author:</b> S.M. Mede-Gillings <br>
+              <b>Author:</b> S.E. Mende-Gillings <br>
               <b>Type:</b> Bachelor thesis <br>
               <a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper <i class="bi bi-download"></i></a>
               <a href="#collapseFour" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
