text update demo section

--- a/index.html
+++ b/index.html
@@ -207,22 +207,26 @@
             <!-- Column for info -->
             <div class="col">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
-                   <p class="mb-4">
-                      The translation tool on this website explores the possibility of translating text to sign language using animated sign language avatars. It is meant to serve as an option for easing communication in situations where professional sign language interpreters cannot be employed, such as in healthcare. 
-                    </p>
-                    <h5>Case Study</h5>
+                    <h5>Text-to-sign translation using animated avatars</h5>
                     <p class="mb-4">
-                      It is challenging for healthcare professionals to communicate with Deaf patients <b><a href="https://doi.org/10.1016/S0140-6736(11)61143-4" target="_blank">[Felllinger, Holzinger and Pollard, 2012]</a></b>, especially in times of COVID-19 <b><a href="https://doi.org/10.1001/jamaoto.2020.1705" target="_blank">[Mckee, Moran and Zazove, 2020]</a></b>. Sign language interpreters cannot always enter hospitals and clinics, facemasks make lipreading impossible <b><a href="https://doi.org/10.1136/bmj.m2372" target="_blank">[Grote and Izagaren,2020]</a></b> and interpreting via videorelay is not always viable. A demo is available of the translations of various sentences frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlans (NGT) to illustrate what is possible with sign language avatars. Just click on the GIF of the avatar to the right.
+                      We are developing tools to translate text into sign language using animated avatars. Such tools have several potential applications. They could support communication between deaf and hearing people in situations where human sign language interpreters cannot be employed, they could give sign language users easier access to written and spoken information, and they could help people in learning sign language. 
                     </p>
-                    <h5>Disclaimer</h5>
+                    <h5>Cautionary note</h5>
                     <p>
-                      We would like to emphasise that a qualified sign language interpreter should, whenever available, always be preferred over a machine translation system. Still, it is worth investigating the extent to which a machine translation system making use of avatar technology can be of help in situations in which a human interpreter cannot be employed.
+                      We should emphasise that, to support face-to-face interaction between deaf and hearing people, a qualified human sign language interpreter should, whenever available, always be preferred over a machine translation system. Still, it is worth investigating the extent to which a machine translation system making use of avatar technology can be of help in situations in which a human interpreter cannot be employed or for purposes other than supporting face-to-face interaction, such as providing access to information or providing support in learning sign language.
                    </p>
-                   <h5>Additional resources</h5>
+                    <h5>A case study: text-to-sign translation for COVID-19 healthcare</h5>
+                    <p class="mb-4">
+                      It is challenging for healthcare professionals to communicate with Deaf patients <b><a href="https://doi.org/10.1016/S0140-6736(11)61143-4" target="_blank">(Felllinger, Holzinger and Pollard, 2012)</a></b>, even more so in times of COVID-19 <b><a href="https://doi.org/10.1001/jamaoto.2020.1705" target="_blank">(Mckee, Moran and Zazove, 2020)</a></b>. Sign language interpreters cannot always enter hospitals and clinics, facemasks make lipreading impossible <b><a href="https://doi.org/10.1136/bmj.m2372" target="_blank">(Grote and Izagaren,2020)</a></b> and interpreting via videorelay is not always viable. We are developing a tool which translates sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlans (NGT). Click on the button below to see a demo of this tool.
+                    </p>
+                    <div class="mb-4">
+                      <button type="button" class="btn btn-info" onclick="removeDisclaimer(); startPose();">Go to demo</button>
+                    </div>
+
+                   <h5>Additional resources for healthcare professionals</h5>
                    <p>
-                     On the
-                     <a href="https://www.wattelt.org/corona/" target="_blank">Wat Telt!</a> website
-                     you can find a video with general advice for health care professional with deaf patients in times of COVID-19. Additionally, this video teaches you fifteen essential signs. Would you like to learn more about the target audience of deaf and hard of hearing people and how to best provide assistance to these people? Sign up for the <b><a href="https://www.rino.nl/cursus/hulpverlening-dove-en-slechthorende-patinten" target="_blank">two-day course providing assistance to deaf and hard of hearing patients at RINO</a></b>! This course is taught by Dr. Anika Smeijers, Prof. Onno Crasborn and Roos Wattel.
+                     Useful advice for health care professionals about communicating with deaf patients can be found on the
+                     <a href="https://www.wattelt.org/corona/" target="_blank">Wat Telt!</a> website. This website also contains a video teaching you fifteen signs that could help you in communicating with deaf patients. Would you like to learn more? Sign up for a <b><a href="https://www.rino.nl/cursus/hulpverlening-dove-en-slechthorende-patinten" target="_blank">two-day course on providing assistance to deaf and hard of hearing patients at RINO</a></b>. This course is taught by Dr. Anika Smeijers (Amsterdam Medical Centre), Prof. Onno Crasborn (Radboud University Nijmegen) and Roos Wattel (<a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a>).
                    </p>
                 </div>
 
