--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto" role="tablist">
                 <li class="nav-item"><a class="nav-link active" role="tab" href="#About" onclick="openTab(event, 'About');">Welcome</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Translate" onclick="openTab(event, 'Translate');">Avatar Translation</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Translate" onclick="openTab(event, 'Translate'); startPose();">Avatar Translation</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#People" onclick="openTab(event, 'People');">People</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Publications" onclick="openTab(event, 'Publications');">Publications</a></li>
                 <!-- <li class="nav-item"><a class="nav-link" role="tab" href="#Funding" onclick="openTab(event, 'Funding');">Funding</a></li> -->
@@ -153,7 +153,7 @@
             <!-- <div class="col">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                    <p class="mb-4">
-                      The translation tool on this website explores the possibility of translating text to sign language using animated sign language avatars. It is meant to serve as an option for easing communication in situations where professional sign language interpreters cannot be employed, such as in healthcare. 
+                      The translation tool on this website explores the possibility of translating text to sign language using animated sign language avatars. It is meant to serve as an option for easing communication in situations where professional sign language interpreters cannot be employed, such as in healthcare.
                     </p>
                     <h5>Case Study</h5>
                     <p class="mb-4">
@@ -209,7 +209,7 @@
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                     <h5>Text-to-sign translation using animated avatars</h5>
                     <p class="mb-4">
-                      We are developing tools to translate text into sign language using animated avatars. Such tools have several potential applications. They could support communication between deaf and hearing people in situations where human sign language interpreters cannot be employed, they could give sign language users easier access to written and spoken information, and they could help people in learning sign language. 
+                      We are developing tools to translate text into sign language using animated avatars. Such tools have several potential applications. They could support communication between deaf and hearing people in situations where human sign language interpreters cannot be employed, they could give sign language users easier access to written and spoken information, and they could help people in learning sign language.
                     </p>
                     <h5>Cautionary note</h5>
                     <p>
