--- a/index.html
+++ b/index.html
@@ -126,9 +126,8 @@
                     <h5>What we do</h5>
                     <p class="mb-4">
                       We are pursuing deeper insights into sign language grammar, and we are using these insights to develop machine translation tools that can translate sentences from Dutch into Sign Language of the Netherlands (NGT), displayed by means of an animated avatar. We are currently developing a
-						<b><a href="covid19/index.html" target="_blank">
-                        tool to improve communication between health care professionals and deaf patients in times of COVID-19.
-                      </a></b>.
+						          <b><a href="covid19/index.html" target="_blank">
+                        tool to improve communication between health care professionals and deaf patients in times of COVID-19</a></b>.
                       In the future, we intend to develop several other applications, for instance to translate announcements at train stations and airports, or to support hearing parents of deaf children in learning sign language.
 
                     <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
