--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container-fluid" style="width: 100%; margin-top: 0px;">
-        <a class="navbar-brand" href="#page-top">
+    <div class="container-fluid" style="width: 83%; margin-top: 0px;">
+        <a class="navbar-brand" href="index.html">
         <img src="images/hand-icon.png" height="25">
           SignLab Amsterdam
         </a>
