--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto" role="tablist">
-                <li class="nav-item"><a class="nav-link active" role="tab" href="#About" onclick="openTab(event, 'About');">Welcome</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Translate" onclick="openTab(event, 'Translate'); startPose();">Avatar Translation</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#People" onclick="openTab(event, 'People');">People</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Publications" onclick="openTab(event, 'Publications');">Publications</a></li>
-                <!-- <li class="nav-item"><a class="nav-link" role="tab" href="#Funding" onclick="openTab(event, 'Funding');">Funding</a></li> -->
-                <!-- <li class="nav-item"><a class="nav-link" role="tab" href="#Tutorial" onclick="openTab(event, 'Tutorial');">SiGML</a></li> -->
-                <!-- <li class="nav-item"><a class="nav-link" role="tab" href="#Resources" onclick="openTab(event, 'Resources');">Resources</a></li> -->
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Projects" onclick="openTab(event, 'Projects');">Projects</a></li>
+                <li class="nav-item"><a class="nav-link active" href="index.html">Welcome</a></li>
+                <li class="nav-item"><a class="nav-link" href="translate.html">Avatar Translation</a></li>
+                <li class="nav-item"><a class="nav-link" href="people.html">People</a></li>
+                <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
+                <!-- <li class="nav-item"><a class="nav-link" href="funding.html">Funding</a></li> -->
+                <!-- <li class="nav-item"><a class="nav-link" href="tutorial.html">Tutorial</a></li> -->
+                <!-- <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li> -->
+                <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
             </ul>
         </div>
     </div>
