--- a/translate.html
+++ b/translate.html
@@ -163,7 +163,13 @@
                 </div>
               </form>
 
-              <span id="language" class="flag-icon flag-icon-nl" onclick="changeLanguage();" data-toggle="tooltip" data-placement="bottom" title="Click on the flag to change the input language"></span>
+              <!-- <span id="language" class="flag-icon flag-icon-nl" onclick="changeLanguage();" data-toggle="tooltip" data-placement="bottom" title="Click on the flag to change the input language"></span> -->
+              <span id="selectExplain">Change the input language: </span>
+              <select class="form-select" aria-label="Default select example" onchange="changeLanguage(this.value);" style="margin-bottom: 5px;">
+               <!-- <option selected>Select the input language</option> -->
+               <option  selected value="English">English</option>
+               <option value="Nederlands">Nederlands</option>
+              </select>
               <!-- This button exists so that the ZonMw scripts know that the avatar option is active -->
               <input type="radio" id="avatarDisplay" name="display" value="demo" class="undisplayed" checked>
 
