referenties naar andere folders goed

--- a/html/funding.html
+++ b/html/funding.html
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- Icon -->
-<link rel="icon" type="../image/x-icon" href="images/hand-icon.png" />
+<link rel="icon" type="image/x-icon" href="../images/hand-icon.png" />
 
 <!-- =============================================== -->
 <!-- Fonts -->
@@ -147,7 +147,7 @@
 <!-- script for timepicker -->
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/js/bootstrap-timepicker.js"></script>
 <!-- script for generating avatar animations -->
-<script type="text/javascript" src="cwa/allcsa.js"> </script>
+<script type="text/javascript" src="../cwa/allcsa.js"> </script>
 
 
 <!-- =============================================== -->
