--- a/html/publications.html
+++ b/html/publications.html
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- Icon -->
-<link rel="icon" type="../image/x-icon" href="images/hand-icon.png" />
+<link rel="icon" type="image/x-icon" href="../images/hand-icon.png" />
 
 <!-- =============================================== -->
 <!-- Fonts -->
@@ -107,7 +107,7 @@
                   <b>Year:</b> 2021 <br>
                   <b>Authors:</b> L.D. Esselink, S.E. Mende-Gillings, F. Roelofsen, A.S. Smeijers <br>
                   <b>Type:</b> Manuscript submitted for publication<br>
-                  <a href="publications/COVID-19.pdf" download="COVID-19">Download paper <i class="bi bi-download"></i></a>
+                  <a href="../publications/COVID-19.pdf" download="COVID-19">Download paper <i class="bi bi-download"></i></a>
                   <a href="#collapseOne" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
                 </p>
                 <div id="collapseOne" class="collapse">
@@ -134,7 +134,7 @@
                 <b>Year:</b> 2020 <br>
                 <b>Author:</b> A.J. Corsel <br>
                 <b>Type:</b> Bachelor thesis <br>
-                <a href="publications/Corsel.pdf" download="Corsel">Download paper <i class="bi bi-download"></i></a>
+                <a href="../publications/Corsel.pdf" download="Corsel">Download paper <i class="bi bi-download"></i></a>
                 <a href="#collapseTwo" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
               </p>
               <div id="collapseTwo" class="collapse">
@@ -162,7 +162,7 @@
               <b>Year:</b> 2020 <br>
               <b>Author:</b> L.D. Esselink <br>
               <b>Type:</b> Bachelor thesis <br>
-              <a href="publications/Esselink.pdf" download="Esselink">Download paper <i class="bi bi-download"></i></a>
+              <a href="../publications/Esselink.pdf" download="Esselink">Download paper <i class="bi bi-download"></i></a>
               <a href="#collapseThree" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
             </p>
             <div id="collapseThree" class="collapse">
@@ -195,7 +195,7 @@
               <b>Year:</b> 2020 <br>
               <b>Author:</b> S.E. Mende-Gillings <br>
               <b>Type:</b> Bachelor thesis <br>
-              <a href="publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper <i class="bi bi-download"></i></a>
+              <a href="../publications/Mende_Gillings.pdf" download="Mende_Gillings">Download paper <i class="bi bi-download"></i></a>
               <a href="#collapseFour" data-toggle="collapse" class="collapsed" aria-hidden="true">Abstract <i class="bi bi-chevron-down"></i></a>
             </p>
             <div id="collapseFour" class="collapse">
