--- a/html/projects.html
+++ b/html/projects.html
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- Icon -->
-<link rel="icon" type="../image/x-icon" href="images/hand-icon.png" />
+<link rel="icon" type="image/x-icon" href="../images/hand-icon.png" />
 
 <!-- =============================================== -->
 <!-- Fonts -->
