--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
 <!-- Navigation-->
-<nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
+<!-- <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container-fluid" style="width: 83%; margin-top: 0px;">
         <a class="navbar-brand" href="index.html">
         <img src="images/hand-icon.png" height="25">
@@ -70,15 +70,21 @@
                 <li class="nav-item"><a class="nav-link active" href="index.html">Welcome</a></li>
                 <li class="nav-item"><a class="nav-link" href="html/translate.html">Avatar Translation</a></li>
                 <li class="nav-item"><a class="nav-link" href="html/people.html">People</a></li>
-                <li class="nav-item"><a class="nav-link" href="html/publications.html">Publications</a></li>
+                <li class="nav-item"><a class="nav-link" href="html/publications.html">Publications</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link" href="html/funding.html">Funding</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link" href="html/tutorial.html">Tutorial</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link" href="html/resources.html">Resources</a></li> -->
-                <li class="nav-item"><a class="nav-link" href="html/projects.html">Projects</a></li>
+                <!-- <li class="nav-item"><a class="nav-link" href="html/projects.html">Projects</a></li>
             </ul>
         </div>
     </div>
-</nav>
+</nav> -->
+
+<!--Navigation bar-->
+<div id="nav-placeholder">
+
+</div>
+<!--end of Navigation bar-->
 
 <!-- Masthead-->
 <!-- <header class="masthead">
