--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
 </nav> -->
 
 <!--Navigation bar-->
-<div id="nav-placeholder">
-
-</div>
+<div id="nav-placeholder"></div>
 <!--end of Navigation bar-->
 
 <!-- Masthead-->
