--- a/html/projects.html
+++ b/html/projects.html
@@ -55,7 +55,8 @@
 
 
 <!-- Navigation-->
-<nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
+<div id="nav-placeholder"></div>
+<!-- <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container-fluid" style="width: 83%; margin-top: 0px;">
         <a class="navbar-brand" href="../index.html">
         <img src="../images/hand-icon.png" height="25">
@@ -70,15 +71,15 @@
                 <li class="nav-item"><a class="nav-link" href="../index.html">Welcome</a></li>
                 <li class="nav-item"><a class="nav-link" href="translate.html">Avatar Translation</a></li>
                 <li class="nav-item"><a class="nav-link" href="people.html">People</a></li>
-                <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
+                <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link" href="funding.html">Funding</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link" href="tutorial.html">Tutorial</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li> -->
-                <li class="nav-item"><a class="nav-link active" href="projects.html">Projects</a></li>
+                <!-- <li class="nav-item"><a class="nav-link active" href="projects.html">Projects</a></li>
             </ul>
         </div>
     </div>
-</nav>
+</nav> -->
 
 <!-- Masthead-->
 <!-- <header class="masthead">
