--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,8 @@
 </head>
 
 
-<body id="page-top" onload="CWASA.init();">
+<body id="page-top">
+   <!-- onload="CWASA.init();"> -->
 
 <div id="page-container">
 <div id="content-wrap">
