active navbar test

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 
 
-<body id="page-top">
+<body id="page-top" onload="changeActive('About');">
   <!-- onload="CWASA.init();"> -->
 
 <div id="page-container">
