--- a/translate.html
+++ b/translate.html
@@ -47,7 +47,7 @@
 </head>
 
 
-<body id="page-top" onload="CWASA.init();">
+<body id="page-top" onload="CWASA.init();changeActive('Translate');">
 
 <div id="page-container">
 <div id="content-wrap">
