--- a/nav.html
+++ b/nav.html
@@ -10,14 +10,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto" role="tablist">
-                <li class="nav-item"><a class="nav-link active" href="index.html">Welcome</a></li>
-                <li class="nav-item"><a class="nav-link" href="translate.html">Avatar Translation</a></li>
-                <li class="nav-item"><a class="nav-link" href="people.html">People</a></li>
-                <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
+                <li class="nav-item"><a class="nav-link active" href="index.html" id="About">Welcome</a></li>
+                <li class="nav-item"><a class="nav-link" href="translate.html" id="Translate">Avatar Translation</a></li>
+                <li class="nav-item"><a class="nav-link" href="people.html" id="People">People</a></li>
+                <li class="nav-item"><a class="nav-link" href="publications.html" id="Publications">Publications</a></li>
                 <!-- <li class="nav-item"><a class="nav-link" href="funding.html">Funding</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link" href="tutorial.html">Tutorial</a></li> -->
                 <!-- <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li> -->
-                <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="projects.html" id="Projects">Projects</a></li>
             </ul>
         </div>
     </div>
