--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
 </head>
 
 
-<body id="page-top">
+<body id="page-top" onload="changeActive('Projects');">
    <!-- onload="CWASA.init();"> -->
 
 <div id="page-container">
