--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,7 @@
 </head>
 
 
-<body id="page-top" onload="changeActive('Publications');">
+<body id="page-top" onload="changeActive('PublicationsNav');">
    onload="CWASA.init();">
 
 <div id="page-container">
