--- a/nav.html
+++ b/nav.html
@@ -10,7 +10,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto" role="tablist">
-                <li class="nav-item"><a class="nav-link active" href="index.html" id="AboutNav">Welcome</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html" id="AboutNav">Welcome</a></li>
                 <li class="nav-item"><a class="nav-link" href="translate.html" id="TranslateNav">Avatar Translation</a></li>
                 <li class="nav-item"><a class="nav-link" href="people.html" id="PeopleNav">People</a></li>
                 <li class="nav-item"><a class="nav-link" href="publications.html" id="PublicationsNav">Publications</a></li>
