--- a/people.html
+++ b/people.html
@@ -47,7 +47,7 @@
 </head>
 
 
-<body id="page-top" onload="changeActive('PeopleNav');">
+<body id="page-top">
   <!-- onload="CWASA.init();"> -->
 
 <div id="page-container">
