--- a/translate.html
+++ b/translate.html
@@ -47,7 +47,7 @@
 </head>
 
 
-<body id="page-top" onload="CWASA.init();">
+<body id="page-top">
 
 <div id="page-container">
 <div id="content-wrap">
@@ -56,42 +56,7 @@
 
 <!-- Navigation-->
 <div id="nav-placeholder"></div>
-<!-- <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container-fluid" style="width: 83%; margin-top: 0px;">
-        <a class="navbar-brand" href="index.html">
-        <img src="images/hand-icon.png" height="25">
-          SignLab Amsterdam
-        </a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            Menu
-            <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto" role="tablist">
-                <li class="nav-item"><a class="nav-link" href="index.html">Welcome</a></li>
-                <li class="nav-item"><a class="nav-link active" href="translate.html">Avatar Translation</a></li>
-                <li class="nav-item"><a class="nav-link" href="people.html">People</a></li>
-                <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li> -->
-                <!-- <li class="nav-item"><a class="nav-link" href="funding.html">Funding</a></li> -->
-                <!-- <li class="nav-item"><a class="nav-link" href="tutorial.html">Tutorial</a></li> -->
-                <!-- <li class="nav-item"><a class="nav-link" href="resources.html">Resources</a></li> -->
-                <!-- <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-            </ul>
-        </div>
-    </div>
-</nav> -->
 
-<!-- Masthead-->
-<!-- <header class="masthead">
-    <div class="container d-flex h-100 align-items-center">
-        <div class="mx-auto text-center">
-            <h1 class="mx-auto my-0 text-uppercase">SignTranslation</h1>
-            <h2 class="text-white-50 mx-auto mt-2 mb-5">Helps medics communicate with deaf patients.</h2>
-            <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>
-        </div>
-    </div>
-</header>
- -->
 
 <!--================================================================-->
 
@@ -99,17 +64,6 @@
 
 <section class="projects-section bg-light fadeIn" id="Translate">
 
-  <!-- <div id="disclaimerAvatar" class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding" style="width: 70%;">
-  <h4>Disclaimer</h4>
-   <p class="mb-4">
-      The translation tool on this website explores the possibility of translating text to sign language using animated sign language avatars. It is meant to serve as an option for easing communication in situations where professional sign language interpreters cannot be employed, such as in healthcare. It is challenging for healthcare professionals to communicate with <b><a href="https://doi.org/10.1016/S0140-6736(11)61143-4" target="_blank">Deaf patients</a></b>, especially in times of <b><a href="https://doi.org/10.1001/jamaoto.2020.1705" target="_blank">COVID-19</a></b>. Sign language interpreters cannot always enter hospitals and clinics, facemasks make <b><a href="https://doi.org/10.1136/bmj.m2372" target="_blank">lipreading impossible</a></b> and interpreting via videorelay is not always viable. A demo is available of the translations of various sentences frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlans (NGT) to illustrate what is possible with sign language avatars.
-    </p>
-    <p>
-      We would like to emphasise that a qualified sign language interpreter should, whenever available, always be preferred over a machine translation system. Still, it is worth investigating the extent to which a machine translation system making use of avatar technology can be of help in situations in which a human interpreter cannot be employed.
-   </p>
-    <input type="button" class="button" value="Demo" onclick="removeDisclaimer();">
-   <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'" onclick="removeDisclaimer();startPose();">
-  </div> -->
 
   <div class="container-fluid" id="disclaimerAvatar">
         <!-- Challenge Row-->
@@ -131,7 +85,7 @@
                       It is challenging for healthcare professionals to communicate with Deaf patients <b><a href="https://doi.org/10.1016/S0140-6736(11)61143-4" target="_blank">(Felllinger, Holzinger and Pollard, 2012)</a></b>, even more so in times of COVID-19 <b><a href="https://doi.org/10.1001/jamaoto.2020.1705" target="_blank">(Mckee, Moran and Zazove, 2020)</a></b>. Sign language interpreters cannot always enter hospitals and clinics, facemasks make lipreading impossible <b><a href="https://doi.org/10.1136/bmj.m2372" target="_blank">(Grote and Izagaren,2020)</a></b> and interpreting via videorelay is not always viable. We are developing a tool which translates sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlans (NGT). Click on the button below to see a demo of this tool.
                     </p>
                     <div class="mb-4">
-                      <button type="button" class="btn btn-info" onclick="removeDisclaimer(); startPose();">Go to demo</button>
+                      <button type="button" class="btn btn-info" href="translator.html">Go to demo</button>
                     </div>
 
                    <h5>Additional resources for healthcare professionals</h5>
@@ -144,144 +98,11 @@
             </div>
             <!-- Column for GIF -->
             <div class="col-5">
-              <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'" onclick="removeDisclaimer(); startPose();">
+              <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'" href="translator.html">
             </div>
           </div>
     </div>
 
-    <div id="avatarTranslator" class="undisplayed" style="width: 100%;">
-      <div id="alertMainTran" class="alertBox"></div>
-        <!-- CWA signing avatar panel 0 -->
-        <!--================================================================-->
-        <!-- <div class="CWASAPanel av0" align="center" ></div> -->
-        <span id="avatar" class="CWASAAvatar av0" style="vertical-align:top; text-align: left;"></span>
-        <!--================================================================-->
-
-        <span style="display:inline-block; vertical-align:top; margin-left: 30px; text-align: left;">
-              <form autocomplete="off">
-                <div id="autocomp" class="autocomplete" style="width:400px;">
-                  <textarea id="mySiGML" class="inputBox" rows="3" placeholder="Enter a sentence or keywords here" onkeydown="if(event.keyCode == 13){event.preventDefault();toSiGML(document.getElementById('mySiGML').value, 'alertMainTran');}"></textarea>
-                </div>
-              </form>
-
-              <!-- <span id="language" class="flag-icon flag-icon-nl" onclick="changeLanguage();" data-toggle="tooltip" data-placement="bottom" title="Click on the flag to change the input language"></span> -->
-              <span id="selectExplain">Change the input language: </span>
-              <select class="form-select" aria-label="Default select example" onchange="changeLanguage(this.value);" style="margin-bottom: 5px;">
-               <!-- <option selected>Select the input language</option> -->
-               <option  selected value="English">English</option>
-               <option value="Nederlands">Nederlands</option>
-              </select>
-              <!-- This button exists so that the ZonMw scripts know that the avatar option is active -->
-              <input type="radio" id="avatarDisplay" name="display" value="demo" class="undisplayed" checked>
-
-              <div id="minutesBox" class="varBox">
-               <label for="minutes" style="display: inline-block;">Number of minutes:</label>
-               <input type="number" id="minutes" name="minutes" min="1" max="59" value="1" style="display: inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('minutes').value > 59){alertMessage('error','Please input a number between 0 and 60','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('minutes').value);}">
-              </div>
-
-              <div id="hoursBox" class="varBox">
-               <label for="hours" style="display: inline-block;">Number of hours:</label>
-               <input type="number" id="hours" name="hours" min="1" max="72" value="1" style="display: inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('hours').value > 72){alertMessage('error','Please input a number between 0 and 73','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('hours').value);}">
-              </div>
-
-              <div id="daysBox" class="varBox">
-               <label for="days" style="display: inline-block;">Number of days:</label>
-               <input type="number" id="days" name="days" min="1" max="14" value="1" style="display: inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('days').value > 14){alertMessage('error','Please input a number between 0 and 15','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('days').value);}">
-              </div>
-
-              <div id="weeksBox" class="varBox">
-               <label for="weeks" style="display: inline-block;">Number of weeks:</label>
-               <input type="number" id="weeks" name="weeks" min="1" max="10" value="1" style="display: inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('weeks').value > 10){alertMessage('error','Please input a number between 0 and 11','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('weeks').value);}">
-              </div>
-
-              <div id="monthsBox" class="varBox">
-               <label for="months" style="display: inline-block;">Number of months:</label>
-               <input type="number" id="months" name="months" min="1" max="18" value="1" style="display: inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('months').value > 18){alertMessage('error','Please input a number between 0 and 19','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('months').value);}">
-              </div>
-
-              <div id="aWeekBox" class="varBox">
-               <label for="aWeek" style="display: inline-block;">Times a week:</label>
-               <input type="number" id="aWeek" name="aWeek" min="1" max="7" value="1" style="display: inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('aWeek').value > 7){alertMessage('error','Please input a number between 0 and 8','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('aWeek').value);}">
-              </div>
-
-              <div id="loneNumberBox" class="varBox">
-               <label for="loneNumber" style="display: inline-block;">Number:</label>
-               <input type="number" id="loneNumber" name="loneNumber" min="1" max="99" value="1" style="display: inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('aWeek').value > 99){alertMessage('error','Please input a number between 0 and 100','alertZonMwTran');} else{checkText(document.getElementById('mySiGML').value, document.getElementById('loneNumber').value);}">
-              </div>
-
-              <div id="dayOfTheWeekBox" class="varBox">
-                <label for="dayOfTheWeek" style="display: inline-block;">Day of the week:</label>
-                <select name="dayOfTheWeek" id="dayOfTheWeek">
-                  <option value="Monday">Monday</option>
-                  <option value="Tuesday">Tuesday</option>
-                  <option value="Wednesday">Wednesday</option>
-                  <option value="Thursday">Thursday</option>
-                  <option value="Friday">Friday</option>
-                  <option value="Saturday">Saturday</option>
-                  <option value="Sunday">Sunday</option>
-                </select>
-               <input type="submit" style="display: inline-block;" onclick="checkText(document.getElementById('mySiGML').value, document.getElementById('dayOfTheWeek').value);">
-              </div>
-
-              <div id="timeBox" class="md-form varBox">
-               <input id="timeInput" type="text" class="form-control timepicker" style="width: 100px; display:inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="checkText(document.getElementById('mySiGML').value,document.getElementById('timeInput').value);">
-              </div>
-
-              <br>
-              <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("mySiGML").value, "alertMainTran");'/>
-              <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
-              <input type="button" id="replayButton" class="btn btn-primary" style="display: none;" value="Replay" name="" onclick="playURL(document.getElementById('replayButton').name)">
-              <br>
-              <br>
-              <label id="speedLabel" for="speedAdj" style="display: inline-block;">Adjust speed: </label>
-               <span id="speedAdj" class="CWASASpeed av0" style="margin-bottom:5px"></span>
-              <br>
-              <br>
-              <label id="glossLabel"for="outputGloss" style="display: inline-block;">Gloss: </label>
-              <input id="outputGloss" class="txtGloss av0" value="[none]" type="text">
-              <br>
-
-        </span>
-
-
-        <!-- FR: I've made the following progress fields invisible, if you comment them out completely the avatar doesn't work anymore -->
-        <div class="undisplayed" style="text-align: center;">
-
-              <span style="font-size: 90%;" >
-                Sign/Frame:
-                <input id="mySF" class="txtSF" value="0/0" type="text" />
-                &nbsp;
-                Gloss:
-                <input id="myGloss" class="txtGloss" value="[none]" type="text" />
-                &nbsp;
-                FPS:
-                <input id="myFPS" class="txtFPS" value="00.00" type="text" />
-              </span>
-        </div>
-
-
-        <div style="text-align: center;">
-            <!-- FR: I've made the following status log field invisible, if you comment it out completely the avatar doesn't work anymore -->
-            <textarea id="myStatusLog"  class="statusLog undisplayed" rows="6">
-            </textarea>
-        </div>
-
-        <br>
-
-
-        <!-- SToCA applet element panel -->
-        <!--================================================================-->
-        <div class="SToCA" tyle="text-align: center;"></div>
-        <!--================================================================-->
-    </div>
 </section>
 
 <!--================================================================-->
