--- a/translate.html
+++ b/translate.html
@@ -85,7 +85,8 @@
                       It is challenging for healthcare professionals to communicate with Deaf patients <b><a href="https://doi.org/10.1016/S0140-6736(11)61143-4" target="_blank">(Felllinger, Holzinger and Pollard, 2012)</a></b>, even more so in times of COVID-19 <b><a href="https://doi.org/10.1001/jamaoto.2020.1705" target="_blank">(Mckee, Moran and Zazove, 2020)</a></b>. Sign language interpreters cannot always enter hospitals and clinics, facemasks make lipreading impossible <b><a href="https://doi.org/10.1136/bmj.m2372" target="_blank">(Grote and Izagaren,2020)</a></b> and interpreting via videorelay is not always viable. We are developing a tool which translates sentences that are frequently used in the diagnosis and treatment of COVID-19 from Dutch into Sign Language of the Netherlans (NGT). Click on the button below to see a demo of this tool.
                     </p>
                     <div class="mb-4">
-                      <button type="button" class="btn btn-info" href="translator.html">Go to demo</button>
+                      <!-- <button type="button" class="btn btn-info" onclick="removeDisclaimer(); startPose();">Go to demo</button> -->
+                      <a class="btn btn-primary" href="translator.html" role="button">Go to demo</a>
                     </div>
 
                    <h5>Additional resources for healthcare professionals</h5>
@@ -98,7 +99,7 @@
             </div>
             <!-- Column for GIF -->
             <div class="col-5">
-              <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'" href="translator.html">
+              <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'">
             </div>
           </div>
     </div>
