--- a/translator.html
+++ b/translator.html
@@ -47,7 +47,7 @@
 </head>
 
 
-<body id="page-top" onload="CWASA.init(); startPose();">
+<body id="page-top" onload="CWASA.init();">
 
 <div id="page-container">
 <div id="content-wrap">
