Avatar staat nu links en komt bovenaan te staan op een kleiner scherm, waardoor de tekst kolom breder en leesbaarder is

--- a/projects.html
+++ b/projects.html
@@ -101,8 +101,12 @@
     <div class="container-fluid">
         <!-- Challenge Row-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+          <!-- Column for GIF -->
+          <div class="col-12 col-md-5">
+            <img src="htmlvideos/projects.gif" class="img-fluid" alt="Avatar signing 'OUR PROJECTS WHAT?'">
+          </div>
             <!-- Column for text -->
-            <div class="col">
+            <div class="col-12 col-md">
             <div class="project-text pb-1 w-100 text-center text-lg-left no-top-padding">
             <!-- <div class="project-text my-auto text-center text-lg-left no-top-padding"> -->
                 <h4>Communication between healthcare professionals and deaf patients in times of COVID-19</h4>
@@ -118,10 +122,6 @@
                 </p>
                 <hr class="d-none d-lg-block mb-0 ml-0" />
             </div>
-          </div>
-          <!-- Column for GIF -->
-          <div class="col-5">
-            <img src="htmlvideos/projects.gif" class="img-fluid" alt="Avatar signing 'OUR PROJECTS WHAT?'">
           </div>
         </div>
     </div>
