--- a/index.html
+++ b/index.html
@@ -105,9 +105,12 @@
     <div class="container-fluid">
         <!-- Challenge Row-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
-
+            <!-- Column for GIF -->
+            <div class="col-12 col-md-5">
+              <img src="htmlvideos/welcome.gif" class="img-fluid" alt="Avatar signing 'HELLO. THIS WEBSITE OF SIGNLAB AMSTERDAM. WELCOME'">
+            </div>
             <!-- Column for info -->
-            <div class="col">
+            <div class="col-12 col-md">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                  <!--  <div class="alert alert-success alert-dismissible">
                     <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
@@ -137,10 +140,6 @@
 
                     <!-- <hr class="d-none d-lg-block mb-0 ml-0" /> -->
                 </div>
-            </div>
-            <!-- Column for GIF -->
-            <div class="col-5">
-              <img src="htmlvideos/welcome.gif" class="img-fluid" alt="Avatar signing 'HELLO. THIS WEBSITE OF SIGNLAB AMSTERDAM. WELCOME'">
             </div>
           </div>
     </div>
