--- a/publications.html
+++ b/publications.html
@@ -100,8 +100,12 @@
 <section class="projects-section bg-light fadeIn" id="Publications">
 <div class="container-fluid">
   <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+    <!-- Column for GIF -->
+    <div class="col-12 col-md-5">
+      <img src="htmlvideos/publications.gif" class="img-fluid" alt="Avatar signing 'YOU MORE READ WANT?'">
+    </div>
       <!-- Column for text -->
-      <div class="col">
+      <div class="col-12 col-md">
           <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
             <div class="collapseTransform">
               <h4>Sign Language Translation in a Healthcare Setting</h4>
@@ -216,10 +220,6 @@
           </div>
             <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
-      </div>
-      <!-- Column for GIF -->
-      <div class="col-5">
-        <img src="htmlvideos/publications.gif" class="img-fluid" alt="Avatar signing 'YOU MORE READ WANT?'">
       </div>
       </div>
 
