--- a/translate.html
+++ b/translate.html
@@ -63,14 +63,15 @@
 <!-- Translate -->
 
 <section class="projects-section bg-light fadeIn" id="Translate">
-
-
   <div class="container-fluid" id="disclaimerAvatar">
         <!-- Challenge Row-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
-
+          <!-- Column for GIF -->
+          <div class="col-12 col-md-5">
+            <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'">
+          </div>
             <!-- Column for info -->
-            <div class="col">
+            <div class="col-12 col-md">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                     <h5>Text-to-sign translation using animated avatars</h5>
                     <p class="mb-4">
@@ -88,18 +89,12 @@
                       <!-- <button type="button" class="btn btn-info" onclick="removeDisclaimer(); startPose();">Go to demo</button> -->
                       <a class="btn btn-primary" href="translator.html" role="button">Go to demo</a>
                     </div>
-
                    <h5>Additional resources for healthcare professionals</h5>
                    <p>
                      Useful advice for health care professionals about communicating with deaf patients can be found on the
                      <a href="https://www.wattelt.org/corona/" target="_blank">Wat Telt!</a> website. This website also contains a video teaching you fifteen signs that could help you in communicating with deaf patients. Would you like to learn more? Sign up for a <b><a href="https://www.rino.nl/cursus/hulpverlening-dove-en-slechthorende-patinten" target="_blank">two-day course on providing assistance to deaf and hard of hearing patients at RINO</a></b>. This course is taught by Dr. Anika Smeijers (Amsterdam Medical Centre), Prof. Onno Crasborn (Radboud University Nijmegen) and Roos Wattel (<a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a>).
                    </p>
                 </div>
-
-            </div>
-            <!-- Column for GIF -->
-            <div class="col-5">
-              <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'">
             </div>
           </div>
     </div>
