--- a/translate.html
+++ b/translate.html
@@ -65,7 +65,7 @@
 <section class="projects-section bg-light fadeIn" id="Translate">
   <div class="container-fluid" id="disclaimerAvatar">
         <!-- Challenge Row-->
-        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5 .g-0">
           <!-- Column for GIF -->
           <div class="col-12 col-md-5">
             <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'">
