--- a/translate.html
+++ b/translate.html
@@ -65,13 +65,13 @@
 <section class="projects-section bg-light fadeIn" id="Translate">
   <div class="container-fluid" id="disclaimerAvatar">
         <!-- Challenge Row-->
-        <div class="row align-items-start no-gutters mb-4 mb-lg-5 .g-0">
+        <div class="row align-items-start no-gutters mb-4 mb-lg-5">
           <!-- Column for GIF -->
           <div class="col-12 col-md-5">
             <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'">
           </div>
             <!-- Column for info -->
-            <div class="col-12 col-md">
+            <div class="col-12 col-md" style="padding:0px; margin: 0px;">
                 <div class="project-text pb-1 w-100 my-auto text-center text-lg-left no-top-padding">
                     <h5>Text-to-sign translation using animated avatars</h5>
                     <p class="mb-4">
