beetje margin aan de rechterkant van de avatar gif

--- a/translate.html
+++ b/translate.html
@@ -67,7 +67,7 @@
         <!-- Challenge Row-->
         <div class="row align-items-start no-gutters mb-4 mb-lg-5">
           <!-- Column for GIF -->
-          <div class="col-12 col-md-5">
+          <div class="col-12 col-md-5" style="margin-right: 10px;">
             <img src="htmlvideos/demo.gif" class="img-fluid" alt="Avatar signing 'YOU CURIOUS AUTOMATIC SIGN LANGUAGE TRANSLATION?'">
           </div>
             <!-- Column for info -->
