--- a/translate.html
+++ b/translate.html
@@ -72,7 +72,7 @@
           </div>
             <!-- Column for info -->
             <div class="col-12 col-md">
-                <div class="project-text pb-1 w-100 my-auto text-left no-top-padding">
+                <div class="project-text pb-1 w-100 my-auto text-left no-top-padding" style="padding:0px;">
                     <h5>Text-to-sign translation using animated avatars</h5>
                     <p class="mb-4">
                       We are developing tools to translate text into sign language using animated avatars. Such tools have several potential applications. They could support communication between deaf and hearing people in situations where human sign language interpreters cannot be employed, they could give sign language users easier access to written and spoken information, and they could help people in learning sign language.
